Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20480

Windows version checking is incorrect

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.0, 5.0.0
    • 4.7.3, 4.7.4, 4.8.0, 5.0.0
    • GUI: Look'n'Feel
    • None

      Windows Vista & higher detection is currently being done like this:
      QSysInfo::WindowsVersion >= QSysInfo::WV_VISTA && QSysInfo::WindowsVersion < QSysInfo::WV_NT_based

      However, this is totally wrong. Untested Windows NT versions such as Windows 8 (NT 6.2) are marked as QSysInfo::WV_NT_based, causing the condition to fail incorrectly.

      The proper way to check for Windows version is thus:
      QSysInfo::WindowsVersion >= QSysInfo::WV_VISTA && (QSysInfo::WindowsVersion & QSysInfo::WV_NT_based)

      https://qt.gitorious.org/qt/qt/merge_requests/1272

        For Gerrit Dashboard: QTBUG-20480
        # Subject Branch Project Status CR V

            jbornema Joerg Bornemann
            miniak Milan Burda
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes