src/widgets/dialogs/qwizard.cpp
@@ -573,7 +573,7 @@ public:
         }
 #if !defined(QT_NO_STYLE_WINDOWSVISTA)
         if (QSysInfo::WindowsVersion >= QSysInfo::WV_VISTA
-            && QSysInfo::WindowsVersion < QSysInfo::WV_NT_based)
+            && (QSysInfo::WindowsVersion & QSysInfo::WV_NT_based))
             vistaInitPending = true;
 #endif
     }
