src/widgets/styles/qwindowsxpstyle.cpp
@@ -5164,13 +5164,15 @@ name|QSysInfo
 operator|::
 name|WV_VISTA
 operator|&&
+operator|(
 name|QSysInfo
 operator|::
 name|WindowsVersion
-operator|<
+operator|&
 name|QSysInfo
 operator|::
 name|WV_NT_based
+operator|)
 operator|)
 condition|)
 block|{
